Add support web page for wikibus

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki Bus</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Wiki Transport Support</title>
+		<link rel="shortcut icon" href="./assets/wikibus2.png" />
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<section class="section">
+			<div class="container">
+				<div class="img">
+					<img src="./assets/wikibus1.png" />
+				</div>
+				<div class="content-container">
+					<h1 class="title">Wiki Bus</h1>
+
+					<div class="subtitle">
+						Wiki Bus: The most comprehensive bus arrival app in Singapore
+					</div>
+
+					<div class="content">
+						You can report issue by sending email to
+						<a
+							href="mailto: sendotjiamis9898@gmail.com?subject = WikiBus_[Your issues]"
+							>sendotjiamis9898@gmail.com</a
+						>
+						with subject [WikiBus]_[Your issues]
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
