--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wiki Transport Support</title>
+		<title>Wiki Bus Support</title>
 		<link rel="shortcut icon" href="./assets/wikibus2.png" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="support.css" />
 	</head>
 	<body>
 		<section class="section">
